--- a/CAT2/4.html
+++ b/CAT2/4.html
@@ -12,11 +12,11 @@
         <div id="myfirst" class="child red good" id="first">child 1
 
             <ul class="this">
-                <li class="childul">this</li>
+                <li class="childul" id="fui">this</li>
                 <li class="childul">is</li>
                 <li class="childul">a</li>
                 <li class="childul">list </li>
-                <li class="childul">of my dreams</li>
+                <li class="childul" id="lui">of my dreams</li>
             </ul>
         </div>
         <div class="child">child 2</div>
@@ -37,42 +37,37 @@
 </body>
 
 <script>
-console.log('Welcome!!');
+    console.log('Welcome');
+let element = document.createElement('li');
+let text = document.createTextNode('I am a text node');
+element.appendChild(text)
 
-let cont = document.querySelector('.no');
-cont = document.querySelector('.container');
-let nodeName = cont.childNodes[1].nodeName; //gives the name of node
-let nodeType = cont.childNodes[1].nodeType; //gives the type of node (list given below) syntax: childNodes[element number]
-// console.log(nodeName)
-// console.log(nodeType)
-// Node types
-// 1. Element
-// 2. Attribute
-// 3. Text Node
-// 8. Comment
-// 9. document
-// 10. docType
+// Add a class name to the li element
+element.className = 'childul';
+element.id = 'createdLi';
+element.setAttribute('title', 'mytitle');
+// element.innerText = '<b>Dholi is the besht</b>';
+// element.innerHTML = '<b>Dholi is the besht</b>';
 
-// console.log(cont.childNodes);
-// console.log(cont.children);
+let ul = document.querySelector('ul.this');
+ul.appendChild(element);
+// console.log(ul)
+// console.log(element)
 
-let container = document.querySelector('div.container');
+let elem2 = document.createElement('h3');
+elem2.id = 'elem2';
+elem2.className = 'elem2';
+let tnode = document.createTextNode('This is a created node for elem2');
+elem2.appendChild(tnode);
 
-// console.log(container.children[1].children[0].children);
-
-// console.log(container.firstChild);
-// console.log(container.firstElementChild);
-
-// console.log(container.lastChild);
-// console.log(container.lastElementChild);
-// console.log(container.children);
-// console.log(container.childElementCount); // Count of child elements
-
-console.log(container.firstElementChild.parentNode);
-console.log(container.firstElementChild.nextSibling);
-console.log(container.firstElementChild.nextElementSibling);
-console.log(container.firstElementChild.nextElementSibling.nextElementSibling);
-
+element.replaceWith(elem2);
+let myul = document.getElementById('myul');
+myul.replaceChild(element, document.getElementById('fui'));
+myul.removeChild(document.getElementById('lui'));
+let pr = elem2.hasAttribute('href');
+elem2.removeAttribute('id');
+elem2.setAttribute('title', 'myelem2title');
+console.log(elem2, pr);
 
 
 </script>
